--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,12 @@
     "type": "project",
     "require": {
         "php": "^8.1",
-        "laravel/lumen-framework": "^10.0"
+        "flipbox/lumen-generator": "^9.2",
+        "laravel/lumen-framework": "^10.0",
+        "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9.1",
+        "fakerphp/faker": "^1.22",
         "mockery/mockery": "^1.4.4",
         "phpunit/phpunit": "^10.0"
     },
