--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,11 @@
 {
     "name": "laravel/lumen",
     "description": "The Laravel Lumen Framework.",
-    "keywords": ["framework", "laravel", "lumen"],
+    "keywords": [
+        "framework",
+        "laravel",
+        "lumen"
+    ],
     "license": "MIT",
     "type": "project",
     "require": {
@@ -11,7 +15,7 @@
         "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.22",
+        "fzaninotto/faker": "^1.9",
         "mockery/mockery": "^1.4.4",
         "phpunit/phpunit": "^10.0"
     },
